# netGui-Tool

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GUIDE_README.md  Makefile  Readme.md  Structure.md  cmake_install.cmake  compile_commands.json  custom_packet.hex  funcionamiento.md
include/: arp.h  ethernet.h  netgui_actions.h  netgui_gui.h  rgl_layout.h  tap.h  tui_app.h
layouts_netGui/: Base_Layout.rgl  Ethernet_TAP_configLayout.rgl  custom_packet.hex
src/: arp.cpp  ethernet.cpp  main.cpp  netgui_actions.cpp  netgui_gui.cpp  rgl_layout.cpp  tap.cpp  tui_app.cpp
tests/: tap_test.cpp
